--- a/style.css
+++ b/style.css
@@ -3,3 +3,36 @@ body {
   height: 100%;
   margin: 0;
 }
+
+header {
+  text-align: center;
+}
+
+nav a {
+  padding: 10px, 0px, 10px, 0px;
+  background-color: beige;
+}
+
+section#featured-property {
+  width: 900px;
+  display: block;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+figcaption {
+  font-size: small;
+}
+
+section#featured-property p {
+  width: 800px;
+  padding-left: 100px;
+}
+
+section#details div {
+  background-color: red;
+  float: left;
+  width: 25%;
+  text-align: center;
+}
